[project]
name = "hypofuzz-pytest-version"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
  "hypofuzz>=24.2.3",
  "hypothesis>=6.112.1",
  "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
